2019-02-11

- [bugfix] added TF_OUTPUT_VAR_FILE_ to create-plan and updated documentation where it was missing
- [enhancement] added consul-config optional input to consul tasks for providing CT_CONSUL_TF_CONFIG_ files

2019-02-06

- [optimization] target outputs are now extracted from a single parent output rather than multiple calls to "terraform output"

2019-01-30

- consul image version to 1.4.2

2019-01-09

- [new] workstation mode provides a way to intercept a container without it exiting early

2019-01-08

- [new] supports installing trusted ca certs into the system root store

2019-01-07

- [new] supports consuming terraform outputs as terraform var files
- [enhancement] changed output tasks to support multiple outputs targets at once
- [breaking] no longer supports a single output target using TF_OUTPUT_TARGET

2019-01-02

- added consul-config to consul-wrapper
  - supports consuming terraform outputs as consul configuration parameters
- renamed consul related param vars to CT_CONSUL_

2018-12-28

- added output tasks

2018-12-27

- added plugin caching
- added auxiliary inputs

2018-12-15

- add {tf-cmd}-consul.yaml tasks
- supports wrapping a terraform phase with a consul cluster join
- supports certificates through the CONCOURSE_TERRAFORM_CONSUL_ params