@@ -779,6 +779,8 @@ CONSUL_CLIENT_KEY=/tmp/build/e55deab7/consul-certificates/client-key.pem
 
 	- exactly one file matching `*.tar.gz` must be contained in this directory or the task will fail
 
+- `aux-input-{index}`: _optional_. supports up to eight (8) auxiliary inputs. see [providing auxiliary inputs](#providing-auxiliary-inputs)
+
 ### outputs
 
 - none
@@ -804,6 +806,8 @@ CONSUL_CLIENT_KEY=/tmp/build/e55deab7/consul-certificates/client-key.pem
 - `plan-output-archive`: _required_. the directory containing a terraform plan archive generated by `create-plan.yaml`.
 
 	- exactly one file matching `*.tar.gz` must be contained in this directory or the task will fail
+
+- `aux-input-{index}`: _optional_. supports up to eight (8) auxiliary inputs. see [providing auxiliary inputs](#providing-auxiliary-inputs)
 
 ### outputs
 
